--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   pinput: ^3.0.1
   expandable_bottom_sheet: ^1.1.1+1
   scoped_model: ^2.0.0
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  carousel_slider: ^4.2.1
+  flutter_html: ^2.2.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
